--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,8 @@
         <version>3.1.2</version>
         <configuration>
           <suiteXmlFiles>
-            <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
+            <suiteXmlFile>${testngpath}</suiteXmlFile>
+            <!-- <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>-->
           </suiteXmlFiles>
         </configuration>
       </plugin>
