--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,25 @@
 {
     "java.configuration.updateBuildConfiguration": "automatic",
     "cSpell.words": [
+        "copete",
+        "Copete",
+        "Cuerpo",
+        "ELEMENTOS",
+        "Grabar",
         "grupo",
         "GRUPO",
         "grupos",
         "GRUPOS",
         "Ingresar",
         "notas",
+        "nuevo",
+        "Nuevo",
         "Tipo",
-        "usuario"
+        "titulo",
+        "Titulo",
+        "usuario",
+        "visibilty",
+        "volanta",
+        "Volanta"
     ]
 }
