fix bodygit add .

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,17 +3,27 @@
     "cSpell.words": [
         "copete",
         "Copete",
+        "Crear",
+        "CREAR",
         "Cuerpo",
+        "cuerpoiframe",
         "ELEMENTOS",
         "Grabar",
         "grupo",
         "GRUPO",
         "grupos",
         "GRUPOS",
+        "Hola",
+        "iframes",
         "Ingresar",
+        "Mundo",
         "notas",
         "nuevo",
         "Nuevo",
+        "prueba",
+        "PRUEBA",
+        "texto",
+        "TEXTO",
         "Tipo",
         "titulo",
         "Titulo",
