--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,20 @@
 {
     "java.configuration.updateBuildConfiguration": "automatic",
     "cSpell.words": [
+        "caracter",
+        "CLICKEADO",
+        "CLICKEAR",
         "copete",
         "Copete",
         "Crear",
         "CREAR",
         "Cuerpo",
         "cuerpoiframe",
+        "delimitadas",
+        "ELEMENTO",
         "ELEMENTOS",
+        "ENVIADO",
+        "ENVIAR",
         "Grabar",
         "grupo",
         "GRUPO",
@@ -16,14 +23,24 @@
         "Hola",
         "iframes",
         "Ingresar",
+        "mostrar",
         "Mundo",
         "notas",
         "nuevo",
         "Nuevo",
+        "objeto",
+        "OBJETO",
+        "Obtengo",
+        "partes",
         "prueba",
         "PRUEBA",
+        "PUDO",
+        "quiero",
+        "ruta",
+        "Separo",
         "texto",
         "TEXTO",
+        "textview",
         "Tipo",
         "titulo",
         "Titulo",
